--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,10 @@ if(Boost_FOUND)
 else()
     message(FATAL_ERROR "Boost not found")
 endif()
-install(TARGETS orm RUNTIME DESTINATION bin)
-set(CPACK_GENERATOR DEB)
+install(TARGETS main RUNTIME DESTINATION bin)
+
+set(CPACK_PACKAGE_NAME "ORM")
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PROJECT_VERSION}")
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
