--- a/.github/workflows/releasy.yml
+++ b/.github/workflows/releasy.yml
@@ -53,6 +53,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ORM-0.0.${{ github.run_number }}-Linux.deb
-          asset_name: ORM-0.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./main-0.0.${{ github.run_number }}-Linux.deb
+          asset_name: main-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
