--- a/.github/workflows/releasy.yml
+++ b/.github/workflows/releasy.yml
@@ -21,13 +21,27 @@ jobs:
             doxygen \
             graphviz \
             libmysqlcppconn-dev \
-            libsqlite3-dev
+            libsqlite3-dev \
+            libgtest-dev \
+            cmake \
+            g++ \
+            make
+
+      - name: Build and install Google Test
+        run: |
+          cd /usr/src/gtest
+          sudo cmake .
+          sudo make
+          sudo cp *.a /usr/lib/
 
       - name: Configure CMake
         run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
 
       - name: Build project
         run: cmake --build .
+
+      - name: Run tests
+        run: ctest --verbose
 
       - name: Package project
         run: cmake --build . --target package
@@ -45,7 +59,7 @@ jobs:
           release_name: Release ${{ github.run_number }}
           draft: false
           prerelease: false
-          
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -53,6 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./main-0.0.${{ github.run_number }}-Linux.deb
-          asset_name: main-0.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./orm_databse-0.0.${{ github.run_number }}-Linux.deb
+          asset_name: orm_database-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
