--- a/.github/workflows/releasy.yml
+++ b/.github/workflows/releasy.yml
@@ -22,17 +22,9 @@ jobs:
             graphviz \
             libmysqlcppconn-dev \
             libsqlite3-dev \
-            libgtest-dev \
             cmake \
             g++ \
             make
-
-      - name: Build and install Google Test
-        run: |
-          cd /usr/src/gtest
-          sudo cmake .
-          sudo make
-          sudo cp *.a /usr/lib/
 
       - name: Configure CMake
         run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
@@ -67,6 +59,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./orm_databse-0.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./orm_database-0.0.${{ github.run_number }}-Linux.deb
           asset_name: orm_database-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
