--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-cmake_minimum_required(VERSION 3.11)  
+cmake_minimum_required(VERSION 3.14)  
 
 set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
 set(PROJECT_VERSION 0.0.${PATCH_VERSION})
@@ -8,6 +8,7 @@ project(main VERSION ${PROJECT_VERSION})
 configure_file(version.h.in version.h)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
@@ -35,7 +36,7 @@ include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG master
+  GIT_TAG main   # основная ветка googletest - main
 )
 
 FetchContent_MakeAvailable(googletest)
