--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,18 +38,6 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 
-option(WITH_BOOST_TEST "Enable Boost.Test support" OFF)
-
-if(WITH_BOOST_TEST)
-    find_package(Boost COMPONENTS unit_test_framework REQUIRED)
-    # Пример теста Boost.Test, добавьте свои файлы тестов
-    add_executable(boost_tests test/test_boost.cpp)
-    target_link_libraries(boost_tests PRIVATE ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
-    include_directories(${Boost_INCLUDE_DIRS})
-    enable_testing()
-    add_test(NAME boost_tests COMMAND boost_tests)
-endif()
-
 enable_testing()
 
 set(TEST_SOURCES
@@ -60,6 +48,10 @@ set(TEST_SOURCES
 add_executable(runTests ${TEST_SOURCES})
 target_link_libraries(runTests PRIVATE database GTest::gtest_main pthread sqlite3)
 target_include_directories(runTests PRIVATE include)
+
+include(GoogleTest)
+gtest_discover_tests(runTests)
+
 add_test(NAME runTests COMMAND runTests)
 
 install(TARGETS orm_database RUNTIME DESTINATION bin)
@@ -68,4 +60,5 @@ set(CPACK_GENERATOR DEB)
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
-set(CPACK_PACK)
+set(CPACK_PACKAGE_CONTACT example@example.com)
+include(CPack)
