--- a/.github/workflows/releasy.yml
+++ b/.github/workflows/releasy.yml
@@ -40,7 +40,7 @@ jobs:
         run: cmake --build . --target package
 
       - name: List deb packages
-        run: find . -name '*.deb' -ls
+        run: find ./_CPack_Packages -name '*.deb' -ls
 
       - name: Create Release
         id: create_release
@@ -60,6 +60,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/_CPack_Packages/Linux/DEB/orm_database-0.0.${{ github.run_number }}-Linux/orm_database-0.0.${{ github.run_number }}-Linux.deb
+          asset_path: ./_CPack_Packages/Linux/DEB/orm_database-0.0.${{ github.run_number }}-Linux/orm_database-0.0.${{ github.run_number }}-Linux.deb
           asset_name: orm_database-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
