--- a/.github/workflows/releasy.yml
+++ b/.github/workflows/releasy.yml
@@ -1,52 +1,25 @@
 name: 'C++ CI'
 
-permissions:
-  contents: write
-  packages: write
-  actions: read
-
 on:
   push:
-    branches: [main]
+    branches:
+      [main]
+   
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
           submodules: true
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libboost-test-dev \
-            doxygen \
-            graphviz \
-            libmysqlcppconn-dev \
-            libsqlite3-dev \
-            cmake \
-            g++ \
-            make
-
-      - name: Configure CMake
-        run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
-
-      - name: Build project
-        run: cmake --build .
-
-      - name: Run tests
-        run: ctest --verbose
-
-      - name: Package project
-        run: cmake --build . --target package
-
-      - name: List generated .deb packages
-        run: find . -name '*.deb' -ls
-
+      - run: sudo apt-get update && sudo apt-get install libgtest-test-dev -y
+      - run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
+      - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
+      - run: cmake --build .
+      - run: find . -name '*.deb' -ls
+      - run: cmake --build . --target package
+      
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -58,16 +31,14 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Find deb package for upload
-        id: find_deb
-        run: echo "deb_path=$(find . -name '*.deb' | head -n 1)" >> $GITHUB_OUTPUT
-
+          
       - name: Upload Release Asset
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.find_deb.outputs.deb_path }}
-          asset_name: ${{ basename(steps.find_deb.outputs.deb_path) }}
+          asset_path: ./orm_database-0.0.${{ github.run_number }}-Linux.deb
+          asset_name: orm_database-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
