--- a/.github/workflows/releasy.yml
+++ b/.github/workflows/releasy.yml
@@ -2,9 +2,7 @@ name: 'C++ CI'
 
 on:
   push:
-    branches:
-      [main]
-   
+    branches: [main]
 
 jobs:
   build:
@@ -13,13 +11,34 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - run: sudo apt-get update && sudo apt-get install libgtest-test-dev -y
-      - run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
-      - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
-      - run: cmake --build .
-      - run: find . -name '*.deb' -ls
-      - run: cmake --build . --target package
-      
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtest-dev doxygen graphviz cmake build-essential
+
+      - name: Build Google Test libraries
+        run: |
+          cd /usr/src/gtest
+          sudo cmake .
+          sudo make
+          sudo cp *.a /usr/lib/
+
+      - name: Configure project with CMake
+        run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
+
+      - name: Build project
+        run: cmake --build .
+
+      - name: Run Google Tests
+        run: ctest --output-on-failure
+
+      - name: Find generated .deb files
+        run: find . -name '*.deb' -ls
+
+      - name: Build package
+        run: cmake --build . --target package
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -31,9 +50,8 @@ jobs:
           draft: false
           prerelease: false
 
-          
       - name: Upload Release Asset
-        id: upload-release-asset
+        id: upload_release_asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
